manifests/telegrambotservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
  labels:
    app: bot-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bot-deployment
  template:
    metadata:
      labels:
        app: bot-deployment
    spec:
      containers:
      - name: telegrambot
        image: 388265291349.dkr.ecr.ap-northeast-2.amazonaws.com/goorm/telegram-bot:BOT-48a9
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
