manifests/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: eks-web
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/today/krw"
spec:
  selector:
     app: backend
  type: NodePort
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
